fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
     top: 0;
     width: 100%;
     height: 50vh;
-    background: black;
+    background: rgb(128, 128, 128);
   }
   .nav-links li {
     opacity: 0;
@@ -155,22 +155,26 @@ body {
   .grid-container-items {
     margin-top: 50px;
   }
+  .services-wrapper-list button {
+    margin-top: 200px;
+  }
   /* PORTFOLIO */
   .row {
     width: 80%;
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-    margin: 0 auto;
+    margin: 100px auto;
   }
   .column {
     flex: 100%;
+    max-width: 100%;
     padding: 0;
     transition: 1s ease;
     margin: 0 auto;
   }
   .column img {
-    margin: 25px;
+    margin: 25px auto;
     vertical-align: middle;
     width: 100%;
     box-shadow: 10px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -306,7 +310,7 @@ body {
     top: 0;
     width: 100%;
     height: 50vh;
-    background: black;
+    background: rgb(128, 128, 128);
   }
   .nav-links li {
     opacity: 0;
@@ -418,6 +422,10 @@ body {
   .grid-container-items {
     margin-top: 50px;
   }
+  .services-wrapper-list button {
+    position: relative;
+    top: 200px;
+  }
   /* PORTFOLIO */
   .portfolio {
     padding-bottom: 150px;
@@ -427,16 +435,17 @@ body {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-    margin: 0 auto;
+    margin: 100px auto;
   }
   .column {
     flex: 100%;
+    max-width: 100%;
     padding: 0;
     transition: 1s ease;
     margin: 0 auto;
   }
   .column img {
-    margin: 25px;
+    margin: 25px auto;
     vertical-align: middle;
     width: 100%;
     box-shadow: 10px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -532,7 +541,7 @@ body {
     min-height: 30px;
   }
 }
-
+/* Tablets */
 @media (min-width: 768px) and (max-height: 1024px) {
   /* Header & Nav */
   .hide {
@@ -560,7 +569,7 @@ body {
     top: 0;
     width: 100%;
     height: 50vh;
-    background: black;
+    background: rgb(128, 128, 128);
   }
   .nav-links li {
     opacity: 0;
@@ -656,7 +665,7 @@ body {
     width: 90%;
     margin: 0 auto;
     position: relative;
-    top: 250px;
+    top: 175px;
   }
   .us {
     margin-top: 50px;
@@ -680,22 +689,26 @@ body {
     margin: 15px auto;
     font-size: 1.5rem;
   }
+  .services-wrapper-list button {
+    position: relative;
+    top: 200px;
+  }
   /* PORTFOLIO */
   .row {
     width: 80%;
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-    margin: 0 auto;
+    margin: 100px auto;
   }
   .column {
-    flex: 100%;
-    padding: 0;
+    flex: 45%;
+    padding: 25px;
     transition: 1s ease;
     margin: 0 auto;
   }
   .column img {
-    margin: 25px;
+    margin: 25px auto;
     vertical-align: middle;
     width: 100%;
     box-shadow: 10px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -792,9 +805,7 @@ body {
   }
 }
 
-/* Tablets */
-
-@media (min-width: 1024px) and (max-height: 1366px) {
+@media (width: 1024px) and (max-height: 1366px) {
   /* Header & Nav */
   .hide {
     display: none;
@@ -941,6 +952,10 @@ body {
     margin: 15px auto;
     font-size: 2rem;
   }
+  .services-wrapper-list button {
+    position: relative;
+    top: 200px;
+  }
   /* PORTFOLIO */
   .row {
     width: 80%;
@@ -950,7 +965,8 @@ body {
     margin: 0 auto;
   }
   .column {
-    flex: 100%;
+    flex: 50%;
+    max-width: 50%;
     padding: 0;
     transition: 1s ease;
     margin: 0 auto;
@@ -1114,6 +1130,7 @@ body {
     font-size: 1.8rem;
     position: relative;
     top: 15px;
+    width: 80%;
   }
   .headings {
     font-size: 2.5rem;
@@ -1167,7 +1184,7 @@ body {
   /* SERVICES */
   .services {
     background-image: url("/images/services.jpg");
-    padding-bottom: 50px;
+    padding-bottom: 250px;
   }
   .services-wrapper-list {
     margin-top: -50px;
@@ -1188,8 +1205,7 @@ body {
     font-size: 1.5rem;
   }
   .services-wrapper-list button {
-    position: relative;
-    margin-top: 225px;
+    margin: 100px 0;
   }
   /* PORTFOLIO */
   .portfolio {
@@ -1210,7 +1226,7 @@ body {
     padding-bottom: 0;
   }
   .column {
-    flex: 20%!important;
+    flex: 30%;
     padding: 0;
     transition: 1s ease;
     margin: 25px;
@@ -1223,7 +1239,7 @@ body {
     border: 5px solid white;
   }
   .column img:hover {
-    width: 150%;
+    width: 130%;
     margin: 0;
     transition: 1s ease;
     position: relative;
